--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,11 @@ body{
 	margin:0;
 	padding: 0;
 }
+@media screen and (max-width: 768px){
+	#header h2{
+		 font-size: 20px;
+	}
+	#header p{
+		font-size: 18px;
+	}
+}
